spring boot bump changes using openrewrite