@@ -793,34 +793,47 @@ public class WorkflowTool {
 
   public String createReadme(Workflow wf) {
     String readmeTemplate = 
-        "![Workflow Badge](https://img.shields.io/badge/Workflow-{workflow_name}-blue.svg)\n\n" +
-        "# Workflow Name: {workflow_name}\n\n" +
-        "## Description\n" +
-        "{description}\n\n" +
-        "## Processes\n" +
-        "{processes}\n\n" +
-        "### Process Descriptions\n" +
-        "{processDescriptions}\n\n" +
-        "## Steps to use the workflow\n\n" +
-        "This section provides detailed instructions on how to use the workflow. Follow these steps to set up and execute the workflow using Geoweaver.\n\n" +
-        "### Step-by-Step Instructions\n\n" +
-        "### Step 1: Download the zip file\n" +
-        "### Step 2: Import the Workflow into Geoweaver\n" +
-        "Open Geoweaver running on your local machine. [video guidance](https://youtu.be/jUd1dzi18EQ)\n" +
-        "1. Click on \"Weaver\" in the top navigation bar.\n" +
-        "2. A workspace to add a workflow opens up. Select the \"Import\" icon in the top navigation bar.\n" +
-        "3. Choose the downloaded zip file" +
-        "4. Click on \"Start\" to upload the file. If the file is valid, a prompt will ask for your permission to upload. Click \"OK\".\n" +
-        "5. Once the file is uploaded, Geoweaver will create a new workflow.\n\n" +
-        "### Step 3: Execute the Workflow\n" +
-        "1. Click on the execute icon in the top navigation bar to start the workflow execution process.[video guidance](https://youtu.be/PJcMNR00QoE)\n" +
-        "2. A wizard will open where you need to select the [video guidance](https://youtu.be/KYiEHI0rn_o) and environment [video guidance](https://www.youtube.com/watch?v=H66AVoBBaHs).\n" +
-        "3. Click on \"Execute\" to initiate the workflow. Enter the required password when prompted and click \"Confirm\" to start executing the workflow.\n\n" +
-        "### Step 4: Monitor Execution and View Results\n" +
-        "1. The workflow execution will begin.\n" +
-        "2. Note: Green indicates the process is successful, Yellow indicates the process is running, and Red indicates the process has failed.\n" +
-        "3. Once the execution is complete, the results will be available immediately.\n\n" +
-        "By following these steps, you will be able to set up and execute the snow cover mapping workflow using Geoweaver.\n";
+        """
+        ![Workflow Badge](https://img.shields.io/badge/Workflow-{workflow_name}-blue.svg)
+        
+        # Workflow Name: {workflow_name}
+        
+        ## Description
+        {description}
+        
+        ## Processes
+        {processes}
+        
+        ### Process Descriptions
+        {processDescriptions}
+        
+        ## Steps to use the workflow
+        
+        This section provides detailed instructions on how to use the workflow. Follow these steps to set up and execute the workflow using Geoweaver.
+        
+        ### Step-by-Step Instructions
+        
+        ### Step 1: Download the zip file
+        ### Step 2: Import the Workflow into Geoweaver
+        Open Geoweaver running on your local machine. [video guidance](https://youtu.be/jUd1dzi18EQ)
+        1. Click on "Weaver" in the top navigation bar.
+        2. A workspace to add a workflow opens up. Select the "Import" icon in the top navigation bar.
+        3. Choose the downloaded zip file\
+        4. Click on "Start" to upload the file. If the file is valid, a prompt will ask for your permission to upload. Click "OK".
+        5. Once the file is uploaded, Geoweaver will create a new workflow.
+        
+        ### Step 3: Execute the Workflow
+        1. Click on the execute icon in the top navigation bar to start the workflow execution process.[video guidance](https://youtu.be/PJcMNR00QoE)
+        2. A wizard will open where you need to select the [video guidance](https://youtu.be/KYiEHI0rn_o) and environment [video guidance](https://www.youtube.com/watch?v=H66AVoBBaHs).
+        3. Click on "Execute" to initiate the workflow. Enter the required password when prompted and click "Confirm" to start executing the workflow.
+        
+        ### Step 4: Monitor Execution and View Results
+        1. The workflow execution will begin.
+        2. Note: Green indicates the process is successful, Yellow indicates the process is running, and Red indicates the process has failed.
+        3. Once the execution is complete, the results will be available immediately.
+        
+        By following these steps, you will be able to set up and execute the snow cover mapping workflow using Geoweaver.
+        """;
 
     String processes = getProcessTitles(wf);
     String processDescriptions = getProcessDescriptions(wf);
@@ -1082,8 +1095,8 @@ public class WorkflowTool {
       e.printStackTrace();
 
       throw new RuntimeException(
-          String.format(
-              "Fail to get skip status of process %s in workflow %s ",
+          
+              "Fail to get skip status of process %s in workflow %s ".formatted(
               workflow_process_id, workflow_id));
     }
 
@@ -1117,15 +1130,15 @@ public class WorkflowTool {
       this.save(wf);
 
       logger.info(
-          String.format("Done Skip process %s in workflow %s ", workflow_process_id, workflow_id));
+          "Done Skip process %s in workflow %s ".formatted(workflow_process_id, workflow_id));
 
     } catch (Exception e) {
 
       e.printStackTrace();
 
       throw new RuntimeException(
-          String.format(
-              "Fail to skip process %s in workflow %s ", workflow_process_id, workflow_id));
+          
+              "Fail to skip process %s in workflow %s ".formatted(workflow_process_id, workflow_id));
     }
   }
 }
